fixes the overlapping problem

--- a/public/assets/css/game.css
+++ b/public/assets/css/game.css
@@ -102,7 +102,7 @@ body {
 .player-turn {
   padding: 8px 16px;
   border-radius: 8px;
-  z-index: 1;
+  z-index: 4;
   background: rgb(130, 48, 48);
   color: aliceblue;
   display: flex;
@@ -255,6 +255,7 @@ div > .tile {
   bottom: 1%;
   right: 1%;
   border-collapse: collapse;
+  z-index: 5;
 
   display: flex;
   flex-direction: column;
@@ -289,7 +290,7 @@ td > img {
 .remaining-tiles {
   padding: 8px 16px;
   border-radius: 8px;
-  z-index: 1;
+  z-index: 4;
   background: rgb(130, 48, 48);
   color: aliceblue;
   display: flex;
